2005-10-10  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpviewable.c (gimp_viewable_get_description): set the
	"tooltip" return value to NULL before calling the virtual function.

	* app/core/gimpbrush.c
	* app/core/gimpbuffer.c
	* app/core/gimpchannel.c
	* app/core/gimplayer.c
	* app/core/gimppaintinfo.c
	* app/core/gimppalette.c
	* app/core/gimppattern.c
	* app/core/gimptoolinfo.c (get_description): don't do it here.

	* app/core/gimpbuffer.c
	* app/core/gimppaintinfo.c: untabbify, cleanup.

	* app/core/gimpobject.c: emit "notify::name" whenerver the name
	changes, clenup.

2005-10-09  DindinX  <dindinx@gimp.org>

	* libgimp/gimpzoompreview.c: Enable selection masking, even if it
	looks buggy. It looks to me that the bug is in
	gimp_drawable_get_sub_preview (), not handling the selection drawable
	as a normal drawable.

2005-10-09  DindinX  <dindinx@gimp.org>

	* libgimp/gimpzoompreview.c: better handling of selections and
	navigation popup. Still not perfect.

2005-10-09  DindinX  <dindinx@gimp.org>

	* libgimp/gimpdrawablepreview.c: made the navigation popup respect the
	aspect ratio of the selection or the drawable.

2005-10-08  Karine Delvare  <kdelvare@nerim.net>

	* app/tools/gimpcroptool.c
	* app/tools/gimpnewrectselecttool.c
	* app/tools/gimprectangletool.c: added status bar info to tell the user
	what to do once the rectangle area is drawn. Fixes bug #318267.

2005-10-07  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/grid.pdb: fixed (false) uninitialized variable
	warnings and cleaned up the code a bit.

	* app/pdb/grid_cmds.c: regenerated.

2005-10-07  Sven Neumann  <sven@gimp.org>

	* app/dialogs/palette-import-dialog.c (palette_import_filename_changed)
	(palette_import_file_callback): use UTF8 encoding with GtkEntry.

2005-10-07  Sven Neumann  <sven@gimp.org>

	* app/core/gimppalette-import.[ch]: added new function
	gimp_palette_import_from_drawable(), respecting the selection as
	suggested in bug #316212.
